--- a/public/app/assets/css/style.css
+++ b/public/app/assets/css/style.css
@@ -624,3 +624,13 @@ footer h3 {
 .navbar-left img{
 	
 }
+/* apoitment form */
+.well-block {
+	background-color: #fff;
+	border: 1px solid #e9e6e8;
+	padding: 40px;
+}
+
+.well-title {
+	margin-bottom: 40px;
+}
