role_start_and_appointment_admin

--- a/public/app/assets/css/style.css
+++ b/public/app/assets/css/style.css
@@ -641,3 +641,7 @@ footer h3 {
 .smallTmargine {
 	margin-top: 5px;
 }
+
+.navbar.navbar-default.navbar-static-top.navbaradmin {
+	background-color: #122b40;
+}
